# robloxmanager

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ram_core/: Cargo.toml
ram_core/src/: api.rs  auth.rs  crypto.rs  error.rs  lib.rs  models.rs  presets.rs  process.rs
ram_ui/: Cargo.toml
ram_ui/src/: app.rs  bridge.rs  browser_login.rs  main.rs  toast.rs
ram_ui/src/components/: group_panel.rs  main_panel.rs  mod.rs  presets_panel.rs  private_servers.rs  settings.rs  sidebar.rs  tutorial.rs
