[package]
name = "ram_core"
version = "1.3.0"
edition = "2021"
description = "Core library for RM — Roblox Account Manager"
license = "MIT"
repository = "https://github.com/centerepic/robloxmanager"
authors = ["RM Contributors"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
sysinfo = "0.32"
